--- a/atp_frontend/src/components/AgeComparison/styles/Graph.css
+++ b/atp_frontend/src/components/AgeComparison/styles/Graph.css
@@ -1,5 +1,6 @@
 #the_chart {
-/*	position: absolute;
-	height: 1000px;
-	width: 1000px;*/
+	position: relative;
+	width: 100%;
+	height: 100%;
+/*	background-color: #c3e2f7;*/
 }
